# Vircon-Project

./: LICENSE.md  README.md  justfile
client/: README.md  pubspec.yaml
client/lib/: main.dart  vircon_app.dart
client/lib/data/: socket_connection_repository.dart  socket_connection_service.dart
client/lib/domain/: connect_to_server_usecase.dart  connection_repository.dart  disconnect_from_server_usecase.dart  send_input_to_server_usecase.dart  snapshot_model.dart  snapshot_model.mapper.dart
client/lib/presentation/: connection_cubit.dart
client/lib/widgets/: connect_page.dart  controller_button.dart  controller_layout.dart  controller_page.dart
flutter-client/: pubspec.yaml
flutter-client/lib/: main.dart
flutter-client/lib/app/: app.dart  routes.dart  vircon_app.dart
flutter-client/lib/common/widgets/: joystick.dart  widgets.dart
flutter-client/lib/features/connect/: connect.dart  connect_page.dart  connect_view.dart  connection_info_cubit.dart  details_form.dart
flutter-client/lib/features/controller/: client_socket_bloc.dart  controller.dart  controller_page.dart  controller_view.dart  gamepad.dart  gamepad_button.dart  gamepad_joystick.dart  (+2 more)
protocol/: README.md
server/: CMakeLists.txt  README.md  connection.cpp  connection.h  connection.hpp  gamepad.cpp  gamepad.h  gamepad.hpp  gui_client.py  guistate.cpp  guistate.h  guistate.hpp  main.cpp  main.py  random_client.py  requirements-test.txt  requirements.txt  serverstate.cpp  serverstate.h  serverstate.hpp  version.hpp
server/vircon/: __init__.py  gamepad.py  packing.py  snapshot.py
(+1 files in other folders)
